--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> This is my first page with GitHub Pages </h1>
-<p>Thanks GitHub!</p>
+<h1> MIT University </h1>
+<p>Thanks MIT! I appreciate the opportunity to become a better coder, and to understand crypto better</p>
 </html>
